--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <default.package>com.rbkmoney.swag.questionary</default.package>
+        <default.package>com.rbkmoney.swag.claim_management</default.package>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven-plugin-version>1.0.0</maven-plugin-version>
         <java.version>1.8</java.version>
@@ -27,13 +27,19 @@
         <springfox-version>3.0.0</springfox-version>
         <jackson-version>2.11.3</jackson-version>
         <spring-version>5.2.9.RELEASE</spring-version>
-        <javax.version>1.3.2</javax.version>
-        <jaxb.version>2.3.1</jaxb.version>
-        <javax-validation.version>2.0.1.Final</javax-validation.version>
-        <http-client.version>4.5.2</http-client.version>
+        <javax-annotation-api-version>1.3.2</javax-annotation-api-version>
+        <javax-validation-api-version>2.0.1.Final</javax-validation-api-version>
+        <jaxb-version>2.3.1</jaxb-version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j-version}</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!--Spring dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -70,6 +76,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
@@ -97,25 +104,25 @@
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
-            <version>${javax.version}</version>
+            <version>${javax-annotation-api-version}</version>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>${jaxb.version}</version>
+            <version>${jaxb-version}</version>
         </dependency>
         <!-- Bean Validation API support -->
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <version>${javax-validation.version}</version>
+            <version>${javax-validation-api-version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>${http-client.version}</version>
+            <version>4.5.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
