--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <default.package>com.rbkmoney.swag.claim_management</default.package>
+        <default.package>com.rbkmoney.swag.questionary</default.package>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven-plugin-version>1.0.0</maven-plugin-version>
         <java.version>1.8</java.version>
