--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "portfinder": "^1.0.3",
     "shelljs": "^0.7.0",
     "swagger-repo": "^1.0.0",
-    "swagger-ui": "^2.1.4"
+    "swagger-ui": "^2.1.4",
+    "redoc-cli": "^0.10.2"
   },
   "private": true,
   "scripts": {
