--- a/spec/definitions/IndividualPersonCategories.yaml
+++ b/spec/definitions/IndividualPersonCategories.yaml
@@ -11,7 +11,8 @@ properties:
     description: Действует от имени иностранного лица
     type: boolean
   worldwideOrgPublicPerson:
-    description: Является должностным лицом публичной международной организации; лицом замещающим государственные должности
+    description: Является должностным лицом публичной международной организации;
+      лицом замещающим государственные должности
     type: boolean
   hasRepresentative:
     description: Имеется представитель клиента
