--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <artifactId>swag-questionary</artifactId>
+    <version>SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
